--- a/packages/app-users/widgets.html
+++ b/packages/app-users/widgets.html
@@ -10,7 +10,7 @@
 		<ul>
 			{{#each list}}
 				<li>
-					{{this.username}}
+					{{this.username}} {{>userState}}
 				</li>
 			{{/each}}
 		</ul>
